--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -4,6 +4,7 @@
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13042124.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13023672-wuhan-lab-700x420-320x200.jpeg" align ="left"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13042124.md#1" target="_blank">武毒所爆丑闻 急删中共军方和国际专家信息</a><br></h3>成为疫情焦点的武汉病毒研究所（WIV）再爆出丑闻，根据最近的一项调......<br><img align="bottom" src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/ntdtv/time.gif">06月23日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041847.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041850-40592cabf22825f35ad7fd97a9ad5be8-320x200.jpg" align ="left"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041847.md#1" target="_blank">【新闻大家谈】内部暗潮涌？中共发血腥警告</a><br></h3>回忆“险遭团灭”，中共发血腥警告，党内暗潮涌？力助武毒所脱责，世卫......<br><img align="bottom" src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/ntdtv/time.gif">06月23日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041887.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041895-000_1UR3TM-320x200.jpg" align ="left"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041887.md#1" target="_blank">学生仿革命手段维权 内部文件泄中共恐慌</a><br></h3>中共百年党庆前夕，大陆高校学生掀起维权运动浪潮，抗议文凭被贬值、要......<br><img align="bottom" src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/ntdtv/time.gif">06月23日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041284.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/08/2008100439102478-320x200.jpg" align ="left"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041284.md#1" target="_blank">员工谈苹果日报被迫关闭 陈用林揭中共意图</a><br></h3>运行26年的香港《苹果日报》将被迫关闭，该报员工表示，报纸受到广大......<br><img align="bottom" src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/ntdtv/time.gif">06月23日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039942.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039942.md#1" target="_blank">冤狱17年 福建法轮功学员左秀云再遭绑架</a><br></h3>6月19日上午8点多，福建省永安市国保警察非法闯入王秀清的福州家中......<br><img align="bottom" src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/ntdtv/time.gif">06月23日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041368.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/04/id12888781-dc34d58be88e197aeed82929772588b6-1-600x400-1-320x200.jpg" align ="left"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041368.md#1" target="_blank">【疫情6.23】疫情期间 全球贫富差距扩大</a><br></h3>据约翰?霍普金斯大学的统计数据，截至美东夏令时周三（6月23日）早......<br><img align="bottom" src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/ntdtv/time.gif">06月23日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041327.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13041327.md#1" target="_blank">七一前 四川一男子自制炸弹称要引爆被击毙</a><br></h3>中共七一前夕，四川一男子被发现藏自制爆炸品，包括数十公斤炸药。今天......<br><img align="bottom" src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/ntdtv/time.gif">06月23日</td></tr>
@@ -28,6 +29,5 @@
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040115.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13040125-ttl7day9w5_website-320x200.jpg" align ="left"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040115.md#1" target="_blank">【首播】专访程晓农：中共前后30年互相否定</a><br></h3>美东时间周二（6月22日）晚9:30，新唐人《热点互动》节目主持人......<br><img align="bottom" src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/ntdtv/time.gif">06月23日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040325.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13040356-1200-800-320x200.jpg" align ="left"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040325.md#1" target="_blank">【秦鹏直播】崔天凯离职 石正丽伙伴被柳叶刀除名</a><br></h3>中共驻美大使崔天凯离职，中美关系处在关键十字路口；武毒所合作伙伴被......<br><img align="bottom" src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/ntdtv/time.gif">06月23日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040258.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2016/02/160111082000100311-320x200.jpg" align ="left"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040258.md#1" target="_blank">周星驰生日怎么过？田启文透露好友新动向</a><br></h3>一举一动都引人关注的“喜剧天王”周星驰（星爷），22日迎来59岁生......<br><img align="bottom" src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/ntdtv/time.gif">06月23日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040043.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-72837295-320x200.jpg" align ="left"></a><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13040043.md#1" target="_blank">家姐当年想当摄影记者 周润发送名贵器材力挺</a><br></h3>获称“民间特首”的香港巨星周润发（发哥），也非常重视亲情。今年66......<br><img align="bottom" src="https://raw.githubusercontent.com/wtyoso3338/www/master/t/ntdtv/time.gif">06月23日</td></tr>
 <tr><td><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/wtyoso3338/djy/blob/master/gb/nsc413_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/wtyoso3338/djy/blob/master/gb/nsc413.md#1<br><a href="https://github.com/wtyoso3338/djy/blob/master/gb/nsc413.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wtyoso3338/djy/blob/master/gb/nsc413.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc413.htm">https://www.epochtimes.com/gb/nsc413.htm</a>    （国内需<a href="https://github.com/wtyoso3338/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
