--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -24,7 +24,7 @@
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/5/23/n12970344.md#1" target="_blank">《淮南子》故事：福祸相依 受到伤害意外得福</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/5/23/n12970344.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12972428-1d542b4920ec4867a26aebe7655772a7-150x120.jpg" align ="left"></a>有人在城内作乱，还被追兵团团围住。有个守门人好心放他出去，不料反被刺伤了身体。有个侍从捧着美酒，让口渴的主人痛快地解渴。然而，结果令人深感讶异……......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月20日 6:38 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13030562.md#1" target="_blank">【唐诗漫谈】帝者气象</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/18/n13030562.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13031592-b213632c443d6c061c9df6cb41b35824-454x400-150x120.jpg" align ="left"></a>隋末大乱，太宗年虽少，然“豁达类汉高，神武同魏祖”，劝父起兵，拯救天下黎民；且其为“天策上将”，披坚执锐、攻坚克难，乃有大唐。24岁时所写的《还陕述怀》一诗…......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月20日 6:12 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/15/n13024317.md#1" target="_blank">【忠义传】单骑救主 赵云义重如山（下）</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/15/n13024317.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13024345-Liu-Bei-vs-Zhao-Yun-150x120.png" align ="left"></a>“古来冲阵扶危主，只有常山赵子龙。”于是，一千多年后的小说《三国演义》，为我们再现了当时惊心动魄的过程。赵云在乱军肆虐、杀声震天的战场四方寻觅，打听消息，得知刘备两位夫人抱着阿斗，混在百姓中逃难。他登上长板坡，先救下甘夫人；又在一处烧坏的土墙下，找到抱着阿斗啼哭的麋夫人。敌军将至，赵云将马让与麋夫人，决定自己步行死战.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月20日 1:48 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/19/n13033356.md#1" target="_blank">一七令．尘</a><br></h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/19/n13033356.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2012/09/0905301117121892-150x120.jpg" align ="left"></a>尘。 浊世，红尘。 沙尘暴，落沙尘。 青衣老道，手执拂尘。 启人心善念，掸厚厚封尘。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月20日 12:10 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/23/n13042466.md#1" target="_blank">踏莎行．逐梦腾龙</a><br></h3> 织雨沙沙，梭风细细，谁裁瀑布霓裳技？ 天生桥上过神仙，虹帘洞里瑶台碧。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月23日 11:54 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/wtyoso3338/djy/blob/master/gb/21/6/22/n13039950.md#1" target="_blank">麦立：花和刺</a><br></h3>大家赞美花的美丽
 大家赞赏花的香甜
 
