--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -5,6 +5,7 @@
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13043049.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13043069-85f0d639f932b09c89e7e6aec825199f-320x200.jpg" align ="left"></a><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13043049.md#1" target="_blank">【远见快评】达萨克猛料曝光 苹果终局背后玄机？</a><br></h3>《柳叶刀》除名达萨克内情流出；推文泄密达萨克石正丽合作超敏感实验......<br><img align="bottom" src="https://raw.githubusercontent.com/rjhtvd372/www/master/t/ntdtv/time.gif">06月24日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13042778.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13043052-bainian3-320x200.png" align ="left"></a><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13042778.md#1" target="_blank">七一临近 中共为保百年庆不惜血本严控民众</a><br></h3>7月1日中共“百年党庆”临近，北京市风声鹤唳，“维稳”规模明显加大......<br><img align="bottom" src="https://raw.githubusercontent.com/rjhtvd372/www/master/t/ntdtv/time.gif">06月24日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13043076.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13043133-a9a980ab5a3bd9459c4a060dc11e8f90-320x200.jpg" align ="left"></a><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13043076.md#1" target="_blank">【时事纵横】中共7.1露怯 逾二百军巴塞爆鸟巢</a><br></h3>中共七一露怯？大批军队进驻鸟巢；传党庆烟花预演掷7千万，上海39人......<br><img align="bottom" src="https://raw.githubusercontent.com/rjhtvd372/www/master/t/ntdtv/time.gif">06月24日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13042742.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-687440628-320x200.jpg" align ="left"></a><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13042742.md#1" target="_blank">洁西卡胃酸倒流声带长茧 被医生劝诫放弃唱歌</a><br></h3>拥有横跨三个八度音域的英国知名女歌手洁西卡（Jessie J），近......<br><img align="bottom" src="https://raw.githubusercontent.com/rjhtvd372/www/master/t/ntdtv/time.gif">06月24日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13042826.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13042991-E4mFGehXIAEvW-O-320x200.jpeg" align ="left"></a><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13042826.md#1" target="_blank">北京风声鹤唳 网传数千军人进驻鸟巢</a><br></h3>中共所谓“百年党庆”临近，北京城风声鹤唳。当局采取严厉“维稳”措施......<br><img align="bottom" src="https://raw.githubusercontent.com/rjhtvd372/www/master/t/ntdtv/time.gif">06月24日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13042700.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13011409-GER-Confucius-Institute-03@1200x1200-320x200.png" align ="left"></a><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13042700.md#1" target="_blank">孔子学院侵蚀学术自由 荷兰教育大臣吁取消</a><br></h3>荷兰教育大臣英格丽?范?恩格尔肖芬（Ingrid van Enge......<br><img align="bottom" src="https://raw.githubusercontent.com/rjhtvd372/www/master/t/ntdtv/time.gif">06月24日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13042754.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13042791-GettyImages-1063609200-320x200.jpg" align ="left"></a><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13042754.md#1" target="_blank">中国“芯荒”加剧 部分芯片价格飙涨5倍</a><br></h3>2020年下半年开始持续至今，芯片供不应求的矛盾日益凸显。中国一家......<br><img align="bottom" src="https://raw.githubusercontent.com/rjhtvd372/www/master/t/ntdtv/time.gif">06月24日</td></tr>
@@ -28,6 +29,5 @@
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13041847.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041850-40592cabf22825f35ad7fd97a9ad5be8-320x200.jpg" align ="left"></a><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13041847.md#1" target="_blank">【新闻大家谈】内部暗潮涌？中共发血腥警告</a><br></h3>回忆“险遭团灭”，中共发血腥警告，党内暗潮涌？力助武毒所脱责，世卫......<br><img align="bottom" src="https://raw.githubusercontent.com/rjhtvd372/www/master/t/ntdtv/time.gif">06月23日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13041887.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041895-000_1UR3TM-320x200.jpg" align ="left"></a><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13041887.md#1" target="_blank">学生仿革命手段维权 内部文件泄中共恐慌</a><br></h3>中共百年党庆前夕，大陆高校学生掀起维权运动浪潮，抗议文凭被贬值、要......<br><img align="bottom" src="https://raw.githubusercontent.com/rjhtvd372/www/master/t/ntdtv/time.gif">06月23日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/22/n13039942.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/22/n13039942.md#1" target="_blank">冤狱17年 福建法轮功学员左秀云再遭绑架</a><br></h3>6月19日上午8点多，福建省永安市国保警察非法闯入王秀清的福州家中......<br><img align="bottom" src="https://raw.githubusercontent.com/rjhtvd372/www/master/t/ntdtv/time.gif">06月23日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13041368.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/04/id12888781-dc34d58be88e197aeed82929772588b6-1-600x400-1-320x200.jpg" align ="left"></a><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13041368.md#1" target="_blank">【疫情6.23】疫情期间 全球贫富差距扩大</a><br></h3>据约翰?霍普金斯大学的统计数据，截至美东夏令时周三（6月23日）早......<br><img align="bottom" src="https://raw.githubusercontent.com/rjhtvd372/www/master/t/ntdtv/time.gif">06月23日</td></tr>
 <tr><td><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc413_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rjhtvd372/djy/blob/master/gb/nsc413.md#1<br><a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc413.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rjhtvd372/djy/blob/master/gb/nsc413.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc413.htm">https://www.epochtimes.com/gb/nsc413.htm</a>    （国内需<a href="https://github.com/rjhtvd372/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
