--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -6,7 +6,7 @@
 <tr><td><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/22/n13039305.md#1" target="_blank"> 【重播】身体天然降压药？3方法自然降血压</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/22/n13039305.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039319-6.22.21-web-Health-Live-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13033103.md#1" target="_blank"> 【重播】疫苗是防重症还是防感染？</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13033103.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13033115-6.19.21-webb-Health-Live-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/2/2/n12728416.md#1" target="_blank">玫瑰疹如何与新冠区分？1秘诀判断 教你正确处理</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/2/2/n12728416.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13005332-shutterstock_713896126-320x200.jpg"></a></td></tr>
-<tr><td><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/4/26/n12906857.md#1" target="_blank">生理期3饮品瘦身 还能补钙、消水肿、解便秘</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/4/26/n12906857.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/04/id12906971-black-fungus-454125241-320x200.jpg"></a></td></tr>
+<tr><td><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13041318.md#1" target="_blank">失恋伤痛不去恐招癌症！中医教你3个化解之道</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13041318.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13043383-shilian_1447161503-copy-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/4/7/n12863478.md#1" target="_blank">骑单车会影响前列腺？保养前列腺 少做6件事</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/4/7/n12863478.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/04/id12865739-9e60ee09b77668295a112da5895e78e8-320x200.jpeg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/13/n13019339.md#1" target="_blank">老年人保持大脑敏锐的五要素</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/13/n13019339.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13019392-A-woman-doing-exercises-and-stretches-outdoors-700x420-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>热文推荐</strong></p></h3></td></tr>
@@ -16,16 +16,15 @@
 <tr><td><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/5/6/n12927628.md#1" target="_blank">桃子的好处和坏处有哪些？4种人吃要注意</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/5/6/n12927628.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12928889-shutterstock_1790096282-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/5/14/n12950187.md#1" target="_blank">膝盖退化疼痛 锻炼臀肌才治本 1动作最推荐</a><br></h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/5/14/n12950187.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12950802-exercise-0-5.14.21-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
-<h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/10/n13012524.md#1" target="_blank">AZ疫苗、强生疫苗的血栓副作用 2中药可预防</a><br></h3>
 <h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/12/n13017412.md#1" target="_blank">胃食道逆流真恼人！中医1招迅速缓解</a><br></h3>
 <h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/13/n13019649.md#1" target="_blank">肾越好越长寿！中医师授养肾5秘诀</a><br></h3>
 <h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/16/n13026109.md#1" target="_blank">想要健康和长寿吗？ 停止五个坏习惯</a><br></h3>
 <h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/17/n13029709.md#1" target="_blank">一周瘦2公斤、血糖快速降 三餐不减量减肥秘诀</a><br></h3>
-<h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13033103.md#1" target="_blank">【重播】疫苗是防重症还是防感染？</a><br></h3>
 <h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/19/n13033696.md#1" target="_blank">咖啡、茶真能消疲劳？医师：改善疲劳关键在这里</a><br></h3>
 <h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/21/n13037063.md#1" target="_blank">变胖可能是脾虚？3招养好脾 增肌又减肥</a><br></h3>
 <h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/21/n13037340.md#1" target="_blank">瘦小腹很简单！消内脏脂肪食物前10名</a><br></h3>
 <h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/22/n13039305.md#1" target="_blank">【重播】身体天然降压药？3方法自然降血压</a><br></h3>
 <h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13040574.md#1" target="_blank">【重播】打疫苗后 你一定要知道2件事</a><br></h3>
+<h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/21/6/23/n13041318.md#1" target="_blank">失恋伤痛不去恐招癌症！中医教你3个化解之道</a><br></h3>
 <tr><td><h3><a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rjhtvd372/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/rjhtvd372/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rjhtvd372/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/rjhtvd372/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
