--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -20,11 +20,11 @@
 <h3><a href="https://github.com/phvhkd3594/djy/blob/master/gb/21/6/13/n13019649.md#1" target="_blank">肾越好越长寿！中医师授养肾5秘诀</a><br></h3>
 <h3><a href="https://github.com/phvhkd3594/djy/blob/master/gb/21/6/16/n13026109.md#1" target="_blank">想要健康和长寿吗？ 停止五个坏习惯</a><br></h3>
 <h3><a href="https://github.com/phvhkd3594/djy/blob/master/gb/21/6/17/n13029709.md#1" target="_blank">一周瘦2公斤、血糖快速降 三餐不减量减肥秘诀</a><br></h3>
-<h3><a href="https://github.com/phvhkd3594/djy/blob/master/gb/21/6/19/n13033696.md#1" target="_blank">咖啡、茶真能消疲劳？医师：改善疲劳关键在这里</a><br></h3>
 <h3><a href="https://github.com/phvhkd3594/djy/blob/master/gb/21/6/21/n13037063.md#1" target="_blank">变胖可能是脾虚？3招养好脾 增肌又减肥</a><br></h3>
 <h3><a href="https://github.com/phvhkd3594/djy/blob/master/gb/21/6/21/n13037340.md#1" target="_blank">瘦小腹很简单！消内脏脂肪食物前10名</a><br></h3>
 <h3><a href="https://github.com/phvhkd3594/djy/blob/master/gb/21/6/22/n13039305.md#1" target="_blank">【重播】身体天然降压药？3方法自然降血压</a><br></h3>
 <h3><a href="https://github.com/phvhkd3594/djy/blob/master/gb/21/6/23/n13040574.md#1" target="_blank">【重播】打疫苗后 你一定要知道2件事</a><br></h3>
 <h3><a href="https://github.com/phvhkd3594/djy/blob/master/gb/21/6/23/n13041318.md#1" target="_blank">失恋伤痛不去恐招癌症！中医教你3个化解之道</a><br></h3>
+<h3><a href="https://github.com/phvhkd3594/djy/blob/master/gb/21/6/23/n13042201.md#1" target="_blank">这些人接种疫苗要注意 2种情况暂缓施打</a><br></h3>
 <tr><td><h3><a href="https://github.com/phvhkd3594/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/phvhkd3594/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/phvhkd3594/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/phvhkd3594/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/phvhkd3594/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/phvhkd3594/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/phvhkd3594/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/phvhkd3594/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/phvhkd3594/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/phvhkd3594/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/phvhkd3594/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/phvhkd3594/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/phvhkd3594/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/phvhkd3594/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/phvhkd3594/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
