--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -32,7 +32,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046979.md#1" target="_blank">前苏联海军总司令：帽状UFO从海中飞出</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046979.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046990-shutterstock_538968583-150x120.jpg" align ="left"></a>美国海军曾证实，其战机飞行员于2004年在加州外海看到像白色薄荷糖状的不明飞行物（UFO）。而此类的UFO目击事件并非美国海军的专利。据前苏联海军总司令切尔纳温（Vladimir Nikolayevich Chernavin）透露，该国海军也遭遇过多起UFO目击事件，他自己就曾亲眼见到帽状UFO进出海面。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 5:43 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13047009.md#1" target="_blank">学生将永远需要的七种技能</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13047009.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/01/Fotolia_209669008_Subscription_L-150x120.jpg" align ="left"></a>如今，教育工作者仍然承担着让学生为未知事物做好准备的责任。哈佛大学托尼·瓦格纳（Tony Wagner）致力于揭示21世纪所需的七种生存技能。为此，他对企业、非营利组织和教育机构的数百名总裁进行了采访。根据他们的回答，列出了21世纪人们赖以生存和发展的七种技能。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 5:02 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046727.md#1" target="_blank">与12-18个月婴幼儿一起阅读</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046727.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/02/Fotolia_82582666_Subscription_L-150x120.jpg" align ="left"></a>每天和宝宝说话、唱歌、讲故事，让宝宝熟悉声音、单词和语言，有助于建立孩子的早期识字能力、听力、单词理解能力以及专注力。还可以培养孩子对阅读的兴趣，为日后的阅读能力打下基础。讲故事不仅可以激发孩子的想像力，帮助他们了解世界，还是你与孩子共享时光的好机会。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 4:41 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/11/n13015907.md#1" target="_blank">暗战赤龙（20）团聚</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/11/n13015907.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12943626-150ffe690b57040c2de7f0553f3998b1-150x120.jpg" align ="left"></a>风雨欲来风满楼，吴伟光则依然待在陡壁上的别墅里看书，闲暇则去半山坡的农田，和丹尼斯、老刘伺弄蔬菜。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 3:00 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13053522.md#1" target="_blank">今月：快逃生</a><br></h3>百年的红船早已腐烂， 千般的粉饰徒具光鲜， 风雨里飘摇天怒人怨， 行将破碎埋葬深渊…......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 11:12 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/24/n13044059.md#1" target="_blank">五律：夏季</a><br></h3> 适逢生长季， 入夏水犹频。 沛雨催新叶， 甘霖洗旧尘。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13047929.md#1" target="_blank">诗歌：红船将沉百年消</a><br></h3>一只红船南湖飘 百年逆天载赤妖 一船满满皆罪恶 血债累累冤魂号......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月26日 12:19 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/24/n13044060.md#1" target="_blank">诗歌：法轮大法好</a><br></h3>末法衰微天欲倾， 气功铺路救人行。 凤凰一唱群莺静， 大法开传各界听。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月26日 12:12 AM			</td></tr>
