--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -3,8 +3,10 @@
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054091.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054249-GettyImages-1231620125-320x200.jpg" align ="left"></a><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054091.md#1" target="_blank">农夫山泉市值损三千亿港元 又陷福岛白桃风波</a><br></h3>日本政府决定两年后将一百多万吨福岛核废水稀释后排入海中，引发中共官......<br><img align="bottom" src="https://raw.githubusercontent.com/ixmwwk3204/www/master/t/ntdtv/time.gif">06月29日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054186.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054209-1200-800-320x200.jpg" align ="left"></a><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054186.md#1" target="_blank">【秦鹏直播】泄漏论反转？蓬佩奥戳穿中共痛点</a><br></h3>大反转？唯一曾在武毒所工作的国际专家发声，中共外交部要求调查200......<br><img align="bottom" src="https://raw.githubusercontent.com/ixmwwk3204/www/master/t/ntdtv/time.gif">06月29日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053392.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053398-24b0b0ca6e3615c806f74480d2704dbe-320x200.jpg" align ="left"></a><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053392.md#1" target="_blank">曾9次遭绑架 长沙女护士贺祥姑失踪一月余</a><br></h3>长沙法轮功学员贺祥姑于2021年3月15日遭绑架，被非法关押至长沙......<br><img align="bottom" src="https://raw.githubusercontent.com/ixmwwk3204/www/master/t/ntdtv/time.gif">06月29日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054065.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13019851-GettyImages-139030847-320x200.jpg" align ="left"></a><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054065.md#1" target="_blank">张雨绮为何改名？只因电视广告里常有一个字</a><br></h3>临时代替谢娜担任主持人的大陆女星张雨绮，6月26日在《快乐大本营......<br><img align="bottom" src="https://raw.githubusercontent.com/ixmwwk3204/www/master/t/ntdtv/time.gif">06月29日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054125.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054281-004b0ef210c55e2c89d0a098e54d09e0-320x200.jpg" align ="left"></a><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054125.md#1" target="_blank">【时事纵横】习续约拉拢普京 党庆秀神秘提前?</a><br></h3>官媒热炒习普视频会，中俄真假友好？北京满街“朝阳群众”，党庆演出神......<br><img align="bottom" src="https://raw.githubusercontent.com/ixmwwk3204/www/master/t/ntdtv/time.gif">06月29日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054093.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054094-f12001d5dca1780fac4cc631e57dad82-320x200.jpg" align ="left"></a><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054093.md#1" target="_blank">【役情最前线】李家超代理特首当天 黑暴雨示警</a><br></h3>新上任的香港政务司长李家超代理特首首日，遇上黑暴雨，将任下届特首......<br><img align="bottom" src="https://raw.githubusercontent.com/ixmwwk3204/www/master/t/ntdtv/time.gif">06月29日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053920.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2019/01/1901300322501487-320x200.jpg" align ="left"></a><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053920.md#1" target="_blank">传张学友出售豪宅 叫价4.3亿港币</a><br></h3>受疫情冲击和大环境的影响，近来香港娱乐圈不少名人放售物业。据港媒披......<br><img align="bottom" src="https://raw.githubusercontent.com/ixmwwk3204/www/master/t/ntdtv/time.gif">06月29日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054117.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13054132-3ed848090511bd2fe636859c3a2189c3-320x200.jpg" align ="left"></a><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054117.md#1" target="_blank">【远见快评】中共自曝病毒信息 中俄续约藏玄机</a><br></h3>有关病毒溯源的最新进展。这些进展不是只有一个两个，而是一口气出来了......<br><img align="bottom" src="https://raw.githubusercontent.com/ixmwwk3204/www/master/t/ntdtv/time.gif">06月29日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054147.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-463162406-700x420-320x200.jpg" align ="left"></a><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13054147.md#1" target="_blank">避免阿拉斯加冲突重演 王毅将视讯参加G20会议</a><br></h3>20国集团（G20）外长在意大利召开G20会议之际，中共外交部宣布......<br><img align="bottom" src="https://raw.githubusercontent.com/ixmwwk3204/www/master/t/ntdtv/time.gif">06月29日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053898.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053981-GettyImages-1148140586-320x200.jpg" align ="left"></a><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053898.md#1" target="_blank">拜普会后 习近平连线普京宣布中俄条约延期</a><br></h3>美俄两国首脑近日在瑞士举行了“拜普会”，双方均获得“想要的东西”......<br><img align="bottom" src="https://raw.githubusercontent.com/ixmwwk3204/www/master/t/ntdtv/time.gif">06月29日</td></tr>
@@ -27,7 +29,5 @@
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13050836.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13051218-0c8d194fd8336121e751ca272b5983e3-320x200.jpg" align ="left"></a><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/27/n13050836.md#1" target="_blank">吉林六旬残疾老太遭冤判 坐轮椅关进看守所</a><br></h3>他们通过修炼法轮功，身心受益；因为坚持信仰，却被中共惨无人道地迫害......<br><img align="bottom" src="https://raw.githubusercontent.com/ixmwwk3204/www/master/t/ntdtv/time.gif">06月28日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13052835.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/02/78335586f40c87336f0bb13911066d71@900x600-320x200.jpeg" align ="left"></a><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13052835.md#1" target="_blank">流亡医生：党要你去死 你就得去死</a><br></h3>流亡英国的前新疆维族医师安华托帝曾多次为中共活摘法轮功学员及新疆维......<br><img align="bottom" src="https://raw.githubusercontent.com/ixmwwk3204/www/master/t/ntdtv/time.gif">06月28日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053244.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13053257-0e798581c7c8748ed4ab5c5c9b514741-320x200.jpg" align ="left"></a><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13053244.md#1" target="_blank">【新闻大家谈】两大新发现 再揭中共掩盖疫情</a><br></h3>上周，美国国立卫生研究院（NIH）证实，中国的研究人员曾在2020......<br><img align="bottom" src="https://raw.githubusercontent.com/ixmwwk3204/www/master/t/ntdtv/time.gif">06月28日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13052645.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13052645.md#1" target="_blank">中共欲封闭海南岛建自由港 专家揭背后原因</a><br></h3>中共近来不断宣传要建立海南自由贸易港并声称要在2025年将全岛封关......<br><img align="bottom" src="https://raw.githubusercontent.com/ixmwwk3204/www/master/t/ntdtv/time.gif">06月28日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13052398.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/21/6/28/n13052398.md#1" target="_blank">中共党庆文艺演出因故罕见提前 网民热议</a><br></h3>为庆中共建党百年，大陆各地劳民伤财举办为中共歌功颂德的演出活动。北......<br><img align="bottom" src="https://raw.githubusercontent.com/ixmwwk3204/www/master/t/ntdtv/time.gif">06月28日</td></tr>
 <tr><td><h3><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ixmwwk3204/djy/blob/master/gb/nsc413_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ixmwwk3204/djy/blob/master/gb/nsc413.md#1<br><a href="https://github.com/ixmwwk3204/djy/blob/master/gb/nsc413.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ixmwwk3204/djy/blob/master/gb/nsc413.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc413.htm">https://www.epochtimes.com/gb/nsc413.htm</a>    （国内需<a href="https://github.com/ixmwwk3204/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
